--- a/src/__404.html
+++ b/src/__404.html
@@ -1,11 +1,11 @@
-@@include('_tpl_layout_head.tpl', {
+@@include('_tpl_layout_head.html', {
 	"title": "Типографика",
 	"pageClass": ""
 })
 <div class="wrapper">
 	<!--HEADER-->
-	@@include('_tpl_layout_header.tpl', {
-		"mainNavItemActive": "Типографика"
+	@@include('_tpl_layout_header.html', {
+		"currentItem": "Типографика"
 	})
 	<!--HEADER end-->
 	<!--MAIN-->
@@ -22,15 +22,15 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_tpl_layout_sidebar.tpl')
+				@@include('_tpl_layout_sidebar.html')
 				<!--SIDEBAR-->
 
 				<!--ASIDE-->
-				@@include('_tpl_layout_aside.tpl')
+				@@include('_tpl_layout_aside.html')
 				<!--ASIDE end-->
 			</div>
 		</div>
 	</div>
 	<!--MAIN end-->
 </div>
-@@include('_tpl_layout_foot.tpl')
+@@include('_tpl_layout_foot.html')
