--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -1,7 +1,7 @@
 <div class="user-form">
 	<div class="layout-text">
 		<div class="form-title">@@title</div>
-		<form action="#" method="get">
+		<form action="#" method="post">
 			<div class="input-wrap">
 				<div class="label-holder">
 					<label for="user-form-example__name-field">Имя<span class="form-mark">*</span></label>
