--- a/src/_tpl_layout_foot.html
+++ b/src/_tpl_layout_foot.html
@@ -1,6 +1,6 @@
 <!-- >>> foot.tpl <<< -->
 <!--footer-->
-@@include('_tpl_layout_footer.tpl')
+@@include('_tpl_layout_footer.html')
 <!--footer end-->
 
 <script src="js/jquery.min.js"></script>
