--- a/src/_tpl_layout_header.html
+++ b/src/_tpl_layout_header.html
@@ -8,8 +8,8 @@
 			<!--navigation-->
 			<div class="nav-wrap">
 				<nav class="nav">
-					@@include('_tpl_nav-constructor.tpl', {
-						"mainNavItemActive": "@@mainNavItemActive",
+					@@include('_tpl_nav-constructor.html', {
+						"currentItem": "@@currentItem",
 						"bsKey": "nav"
 					})
 				</nav>
