--- a/src/__index.html
+++ b/src/__index.html
@@ -1,11 +1,11 @@
-@@include('_tpl_layout_head.tpl', {
+@@include('_tpl_layout_head.html', {
 	"title": "Главная",
 	"pageClass": ""
 })
 <div class="wrapper">
 	<!--HEADER-->
-	@@include('_tpl_layout_header.tpl', {
-		"mainNavItemActive": "Главная"
+	@@include('_tpl_layout_header.html', {
+		"currentItem": "Главная"
 	})
 	<!--HEADER end-->
 	<!--MAIN-->
@@ -16,7 +16,7 @@
 				<div class="content-wrap">
 					<div class="content user-content">
 						<!--breadcrumbs-->
-						@@include('_tpl_breadcrumbs.tpl', {
+						@@include('_tpl_breadcrumbs.html', {
 							"last": ""
 						})
 						<!--breadcrumbs end-->
@@ -31,15 +31,15 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_tpl_layout_sidebar.tpl')
+				@@include('_tpl_layout_sidebar.html')
 				<!--SIDEBAR-->
 
 				<!--ASIDE-->
-				@@include('_tpl_layout_aside.tpl')
+				@@include('_tpl_layout_aside.html')
 				<!--ASIDE end-->
 			</div>
 		</div>
 	</div>
 	<!--MAIN end-->
 </div>
-@@include('_tpl_layout_foot.tpl')
+@@include('_tpl_layout_foot.html')
