--- a/src/_tpl_forms_form-default.html
+++ b/src/_tpl_forms_form-default.html
@@ -1,4 +1,4 @@
-<form action="#" method="get">
+<form action="#" method="post">
 	<div class="input-wrap field-effects-js">
 		<div class="label-holder">
 			<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
