--- a/src/_tpl_forms_form-selects.html
+++ b/src/_tpl_forms_form-selects.html
@@ -1,4 +1,4 @@
-<form action="#" method="get">
+<form action="#" method="post">
 	<div class="input-wrap field-effects-js">
 		<div class="label-holder">
 			<label for="default-select-example">Некастомный селект:</label>
