--- a/src/typography.html
+++ b/src/typography.html
@@ -392,15 +392,6 @@
 											<th>Как таковая</th>
 										</tr>
 									</thead>
-									<tfoot>
-										<tr>
-											<td>Итого</td>
-											<td>55%</td>
-											<td>23422</td>
-											<td>&nbsp;</td>
-											<td>&nbsp;</td>
-										</tr>
-									</tfoot>
 									<tbody>
 										<tr>
 											<td>Содержаться</td>
@@ -438,6 +429,15 @@
 											<td>Нет</td>
 										</tr>
 									</tbody>
+									<tfoot>
+										<tr>
+											<td>Итого</td>
+											<td>55%</td>
+											<td>23422</td>
+											<td>&nbsp;</td>
+											<td>&nbsp;</td>
+										</tr>
+									</tfoot>
 								</table>
 							</div>
 							<!--table styling end-->
@@ -457,15 +457,6 @@
 											<th>Как таковая</th>
 										</tr>
 									</thead>
-									<tfoot>
-										<tr>
-											<td>Итого</td>
-											<td>55%</td>
-											<td>23422</td>
-											<td>&nbsp;</td>
-											<td>&nbsp;</td>
-										</tr>
-									</tfoot>
 									<tbody>
 										<tr>
 											<td>Содержаться</td>
@@ -503,6 +494,15 @@
 											<td>Нет</td>
 										</tr>
 									</tbody>
+									<tfoot>
+										<tr>
+											<td>Итого</td>
+											<td>55%</td>
+											<td>23422</td>
+											<td>&nbsp;</td>
+											<td>&nbsp;</td>
+										</tr>
+									</tfoot>
 								</table>
 							</div>
 							<!--table default end-->
@@ -604,7 +604,7 @@
 							<!--form-default-->
 							<h3><a href="#hash-formElementExample" id="hash-formElementExample" class="hashAnchor"><span class="mark">Поля форм</span></a></h3>
 							<div class="layout-text">
-								<form action="#" method="get">
+								<form action="#" method="post">
 									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
@@ -695,7 +695,7 @@
 							<!--selects-->
 							<h3><a href="#hash-formsSelect" id="hash-formsSelect" class="hashAnchor"><span class="mark">Селекты</span></a></h3>
 							<div class="layout-text">
-								<form action="#" method="get">
+								<form action="#" method="post">
 									<div class="input-wrap field-effects-js">
 										<div class="label-holder">
 											<label for="default-select-example">Некастомный селект:</label>
@@ -902,7 +902,7 @@
 							<div class="user-form">
 								<div class="layout-text">
 									<div class="form-title">Задать вопрос</div>
-									<form action="#" method="get">
+									<form action="#" method="post">
 										<div class="input-wrap">
 											<div class="label-holder">
 												<label for="user-form-example__name-field">Имя<span class="form-mark">*</span></label>
@@ -1065,7 +1065,7 @@
 							<!--search-page-->
 							<h3><a href="#hash-searchPage" id="hash-searchPage" class="hashAnchor"><span class="mark">Пример страницы поиска</span></a></h3>
 							<div class="layout-text">
-								<form action="" method="get">
+								<form action="#" method="get">
 									<input type="text" name="q" value="поиск" size="40">&nbsp;<input type="submit" value="Искать">
 									<input class="btn-default" type="hidden" name="how" value="r">
 								</form>
