--- a/src/__typography.html
+++ b/src/__typography.html
@@ -15,186 +15,189 @@
 				<!--CONTENT-->
 				<div class="content-wrap">
 					<div class="content user-content">
-						<!--breadcrumbs-->
-						@@include('_tpl_typography_components.html', {
-							"component": "breadcrumbs"
-						})
-						<!--breadcrumbs end-->
 
-						<!--heading-->
-						@@include('_tpl_typography_components.html', {
-							"component": "heading"
-						})
-						<!--heading end-->
+						<div class="layout-article">
+							<!--breadcrumbs-->
+							@@include('_tpl_typography_components.html', {
+								"component": "breadcrumbs"
+							})
+							<!--breadcrumbs end-->
 
-						<!--datetime-->
-						@@include('_tpl_typography_components.html', {
-							"component": "dateTime"
-						})
-						<!--datetime end-->
+							<!--heading-->
+							@@include('_tpl_typography_components.html', {
+								"component": "heading"
+							})
+							<!--heading end-->
 
-						<!--entry-img-->
-						@@include('_tpl_typography_components.html', {
-							"component": "entryImage"
-						})
-						<!--entry-img end-->
+							<!--datetime-->
+							@@include('_tpl_typography_components.html', {
+								"component": "dateTime"
+							})
+							<!--datetime end-->
 
-						<!--entry-text-->
-						@@include('_tpl_typography_components.html', {
-							"component": "entryText"
-						})
-						<!--entry-text end-->
+							<!--entry-img-->
+							@@include('_tpl_typography_components.html', {
+								"component": "entryImage"
+							})
+							<!--entry-img end-->
 
-						<!--paragraphs-->
-						@@include('_tpl_typography_components.html', {
-							"component": "paragraphs"
-						})
-						<!--paragraphs end-->
+							<!--entry-text-->
+							@@include('_tpl_typography_components.html', {
+								"component": "entryText"
+							})
+							<!--entry-text end-->
 
-						<!--h2-h6-->
-						@@include('_tpl_typography_components.html', {
-							"component": "h2h6"
-						})
-						<!--h2-h6 end-->
+							<!--paragraphs-->
+							@@include('_tpl_typography_components.html', {
+								"component": "paragraphs"
+							})
+							<!--paragraphs end-->
 
-						<!--separator--><hr>
+							<!--h2-h6-->
+							@@include('_tpl_typography_components.html', {
+								"component": "h2h6"
+							})
+							<!--h2-h6 end-->
 
-						<!--font style-->
-						@@include('_tpl_typography_components.html', {
-							"component": "fontStyle"
-						})
-						<!--font style end-->
+							<!--separator--><hr>
 
-						<!--separator--><hr>
+							<!--font style-->
+							@@include('_tpl_typography_components.html', {
+								"component": "fontStyle"
+							})
+							<!--font style end-->
 
-						<!--list ul-->
-						@@include('_tpl_typography_components.html', {
-							"component": "listUl"
-						})
-						<!--list ul end-->
+							<!--separator--><hr>
 
-						<!--list ol-->
-						@@include('_tpl_typography_components.html', {
-							"component": "listOl"
-						})
-						<!--list ol end-->
+							<!--list ul-->
+							@@include('_tpl_typography_components.html', {
+								"component": "listUl"
+							})
+							<!--list ul end-->
 
-						<!--list mix-->
-						@@include('_tpl_typography_components.html', {
-							"component": "listMix"
-						})
-						<!--list mix end-->
+							<!--list ol-->
+							@@include('_tpl_typography_components.html', {
+								"component": "listOl"
+							})
+							<!--list ol end-->
 
-						<div style="clear: both;"></div>
-						<!--separator--><hr>
+							<!--list mix-->
+							@@include('_tpl_typography_components.html', {
+								"component": "listMix"
+							})
+							<!--list mix end-->
 
-						<!--blockquote-->
-						@@include('_tpl_typography_components.html', {
-							"component": "blockquote"
-						})
-						<!--blockquote end-->
+							<div style="clear: both;"></div>
+							<!--separator--><hr>
 
-						<!--table styling-->
-						@@include('_tpl_typography_components.html', {
-							"component": "tableStyling"
-						})
-						<!--table styling end-->
+							<!--blockquote-->
+							@@include('_tpl_typography_components.html', {
+								"component": "blockquote"
+							})
+							<!--blockquote end-->
 
-						<p>Обычный стандарт для интерлиньяжа — это около 1,4em, хотя очень часто он слишком плотный для экранов: одна из ключевых характеристик для шрифта, который будет хорошо работать на экранах — это большие контура, которые будут требовать увеличить интерлиньяж, чтобы соответствовать иерархии пространства.</p>
+							<!--table styling-->
+							@@include('_tpl_typography_components.html', {
+								"component": "tableStyling"
+							})
+							<!--table styling end-->
 
-						<!--table default-->
-						@@include('_tpl_typography_components.html', {
-							"component": "tableDefault"
-						})
-						<!--table default end-->
+							<p>Обычный стандарт для интерлиньяжа — это около 1,4em, хотя очень часто он слишком плотный для экранов: одна из ключевых характеристик для шрифта, который будет хорошо работать на экранах — это большие контура, которые будут требовать увеличить интерлиньяж, чтобы соответствовать иерархии пространства.</p>
 
-						<!--files-->
-						@@include('_tpl_typography_components.html', {
-							"component": "files"
-						})
-						<!--files end-->
+							<!--table default-->
+							@@include('_tpl_typography_components.html', {
+								"component": "tableDefault"
+							})
+							<!--table default end-->
 
-						<!--style default button-->
-						@@include('_tpl_typography_components.html', {
-							"component": "buttons"
-						})
-						<!--style default button end-->
+							<!--files-->
+							@@include('_tpl_typography_components.html', {
+								"component": "files"
+							})
+							<!--files end-->
 
-						<div class="user-spacer">&nbsp;</div>
+							<!--style default button-->
+							@@include('_tpl_typography_components.html', {
+								"component": "buttons"
+							})
+							<!--style default button end-->
 
-						<!--form-default-->
-						@@include('_tpl_typography_components.html', {
-							"component": "formDefault"
-						})
-						<!--form-default end-->
+							<div class="user-spacer">&nbsp;</div>
 
-						<div class="user-spacer">&nbsp;</div>
+							<!--form-default-->
+							@@include('_tpl_typography_components.html', {
+								"component": "formDefault"
+							})
+							<!--form-default end-->
 
-						<!--selects-->
-						@@include('_tpl_typography_components.html', {
-							"component": "select"
-						})
-						<!--selects end-->
+							<div class="user-spacer">&nbsp;</div>
 
-						<div class="user-spacer">&nbsp;</div>
+							<!--selects-->
+							@@include('_tpl_typography_components.html', {
+								"component": "select"
+							})
+							<!--selects end-->
 
-						<!--checkbox and radio-->
-						@@include('_tpl_typography_components.html', {
-							"component": "checkboxRadio"
-						})
-						<!--checkbox and radio end-->
+							<div class="user-spacer">&nbsp;</div>
 
-						<!--user form-->
-						@@include('_tpl_typography_components.html', {
-							"component": "userForm"
-						})
-						<!--user form end-->
+							<!--checkbox and radio-->
+							@@include('_tpl_typography_components.html', {
+								"component": "checkboxRadio"
+							})
+							<!--checkbox and radio end-->
 
-						<!--columnize-->
-						@@include('_tpl_typography_components.html', {
-							"component": "columnize"
-						})
-						<!--columnize end-->
+							<!--user form-->
+							@@include('_tpl_typography_components.html', {
+								"component": "userForm"
+							})
+							<!--user form end-->
 
-						<div class="user-spacer">&nbsp;</div>
+							<!--columnize-->
+							@@include('_tpl_typography_components.html', {
+								"component": "columnize"
+							})
+							<!--columnize end-->
 
-						<!--images align-->
-						@@include('_tpl_typography_components.html', {
-							"component": "imagesAlign"
-						})
-						<!--images align end-->
+							<div class="user-spacer">&nbsp;</div>
 
-						<p>Обычный стандарт для интерлиньяжа — это около 1,4em, хотя очень часто он слишком плотный для экранов: одна из ключевых характеристик для шрифта, который будет хорошо работать на экранах — это большие контура, которые будут требовать увеличить интерлиньяж, чтобы соответствовать иерархии пространства.</p>
-						<!--separator--><hr>
+							<!--images-align-->
+							@@include('_tpl_typography_components.html', {
+								"component": "imagesAlign"
+							})
+							<!--images-align end-->
 
-						<!--images-slider-->
-						@@include('_tpl_typography_components.html', {
-							"component": "imagesSlider"
-						})
-						<!--images-slider end-->
+							<p>Обычный стандарт для интерлиньяжа — это около 1,4em, хотя очень часто он слишком плотный для экранов: одна из ключевых характеристик для шрифта, который будет хорошо работать на экранах — это большие контура, которые будут требовать увеличить интерлиньяж, чтобы соответствовать иерархии пространства.</p>
+							<!--separator--><hr>
 
-						<!--separator--><hr>
+							<!--images-slider-->
+							@@include('_tpl_typography_components.html', {
+								"component": "imagesSlider"
+							})
+							<!--images-slider end-->
 
-						<!--search-page-->
-						@@include('_tpl_typography_components.html', {
-							"component": "searchPage"
-						})
-						<!--search-page end-->
+							<!--separator--><hr>
 
-						<!--separator--><hr>
-						<!--feature-list-->
-						@@include('_tpl_typography_components.html', {
-							"component": "featureList"
-						})
-						<!--feature-list end-->
+							<!--search-page-->
+								@@include('_tpl_typography_components.html', {
+									"component": "searchPage"
+								})
+								<!--search-page end-->
 
-						<div class="user-spacer">&nbsp;</div>
+								<!--separator--><hr>
+								<!--feature-list-->
+								@@include('_tpl_typography_components.html', {
+									"component": "featureList"
+								})
+								<!--feature-list end-->
 
-						<!--print-button-->
-						@@include('_tpl_typography_components.html', {
-							"component": "printButton"
-						})
-						<!--print-button end-->
+								<div class="user-spacer">&nbsp;</div>
+
+								<!--print-button-->
+								@@include('_tpl_typography_components.html', {
+									"component": "printButton"
+								})
+								<!--print-button end-->
+						</div>
 
 						<script>
 							'use strict';
