--- a/src/_tpl_forms_form-default.html
+++ b/src/_tpl_forms_form-default.html
@@ -1,63 +1,63 @@
 <form action="#" method="post">
-	<div class="input-wrap field-effects-js">
+	<div class="input-wrap">
 		<div class="label-holder">
 			<label for="expl-label-01">Пример текстового поля с плейсхолдером: <span class="form-mark">*</span></label>
 		</div>
 		<div class="input-holder">
-			<input type="text" placeholder="Текстовое поле" id="expl-label-01" />
+			<input class="field-effects-js" type="text" placeholder="Текстовое поле" id="expl-label-01" />
 			<span class="error-note">Поле обязательное для заполнения</span>
 			<span class="confirm-note">&nbsp;</span>
 		</div>
 	</div>
-	<div class="input-wrap field-effects-js">
+	<div class="input-wrap">
 		<div class="label-holder">
 			<label for="expl-label-02">Пример невалидного текстового поля: <span class="form-mark">*</span></label>
 		</div>
 		<div class="input-holder error">
-			<input class="error" type="text" placeholder="Невалидное поле" id="expl-label-02" />
+			<input class="field-effects-js error" type="text" placeholder="Невалидное поле" id="expl-label-02" />
 			<span class="error-note">Поле обязательное для заполнения</span>
 			<span class="confirm-note">&nbsp;</span>
 		</div>
 	</div>
 	<div class="form-row">
-		<div class="input-wrap field-effects-js">
+		<div class="input-wrap">
 			<div class="label-holder">
 				<label for="expl-label-03">Текстовое поле первое: <span class="form-mark">*</span></label>
 			</div>
 			<div class="input-holder">
-				<input type="text" placeholder="Текстовое поле первое" id="expl-label-03" />
+				<input class="field-effects-js" type="text" placeholder="Текстовое поле первое" id="expl-label-03" />
 				<span class="error-note">Поле обязательное для заполнения</span>
 				<span class="confirm-note">&nbsp;</span>
 			</div>
 		</div>
-		<div class="input-wrap field-effects-js">
+		<div class="input-wrap">
 			<div class="label-holder">
 				<label for="expl-label-04">Текстовое поле второе: <span class="form-mark">*</span></label>
 			</div>
 			<div class="input-holder error">
-				<input class="error" type="text" placeholder="Текстовое поле второе" id="expl-label-04" />
+				<input class="field-effects-js error" type="text" placeholder="Текстовое поле второе" id="expl-label-04" />
 				<span class="error-note">Поле обязательное для заполнения</span>
 				<span class="confirm-note">&nbsp;</span>
 			</div>
 		</div>
 	</div>
 	<div class="form-row">
-		<div class="input-wrap field-effects-js">
+		<div class="input-wrap">
 			<div class="label-holder">
 				<label for="expl-label-05">Текстовое поле третье: <span class="form-mark">*</span></label>
 			</div>
 			<div class="input-holder">
-				<input type="text" placeholder="Текстовое поле третье" id="expl-label-05" />
+				<input class="field-effects-js" type="text" placeholder="Текстовое поле третье" id="expl-label-05" />
 				<span class="error-note">Поле обязательное для заполнения</span>
 				<span class="confirm-note">&nbsp;</span>
 			</div>
 		</div>
-		<div class="input-wrap field-effects-js">
+		<div class="input-wrap">
 			<div class="label-holder">
 				<label for="expl-label-06">Пример селекта: <span class="form-mark">*</span></label>
 			</div>
 			<div class="select error">
-				<select class="cselect error" name="filter-type" id="expl-label-06">
+				<select class="cselect field-effects-js error" name="filter-type" id="expl-label-06">
 					<option value="1">Размер</option>
 					<option value="2">Вес</option>
 					<option value="3">Цвет</option>
@@ -72,12 +72,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="input-wrap field-effects-js">
+	<div class="input-wrap">
 		<div class="label-holder">
 			<label for="expl-label-07">Сообщение:</label>
 		</div>
 		<div class="input-holder">
-			<textarea placeholder="Сообщение" id="expl-label-07"></textarea>
+			<textarea class="field-effects-js" placeholder="Сообщение" id="expl-label-07"></textarea>
 			<span class="error-note">Поле обязательное для заполнения</span>
 			<span class="confirm-note">&nbsp;</span>
 		</div>
