--- a/src/_tpl_typography_components.html
+++ b/src/_tpl_typography_components.html
@@ -381,6 +381,16 @@
 		@@include('_tpl_forms_form-default.html')
 	</div>
 
+}@@if(context.component === "formClear") {
+
+	@@include('_tpl_title-anchor.html', {
+		"taId": "formElementClearExample",
+		"taText": "Поля форм (без оберток). Элементы идут один за другим."
+	})
+	<div class="layout-text">
+		@@include('_tpl_forms_form-clear.html')
+	</div>
+
 }@@if(context.component === "select") {
 
 	@@include('_tpl_title-anchor.html', {
