--- a/src/__forms.html
+++ b/src/__forms.html
@@ -21,39 +21,33 @@
 
 							<h1>Тестирование элементов форм</h1>
 
-							<!--form-default-->
+							<!--form clear-->
 							@@include('_tpl_typography_components.html', {
 								"component": "formClear"
 							})
-							<!--form-default end-->
+							<!--form clear end-->
 
-							<div class="user-spacer">&nbsp;</div>
+							<div class="user-spacer"></div>
 
-							<!--form-default-->
+							<!--form default-->
 							@@include('_tpl_typography_components.html', {
 								"component": "formDefault"
 							})
-							<!--form-default end-->
+							<!--form default end-->
 
-							<div class="user-spacer">&nbsp;</div>
-
-							<!--selects-->
-							@@include('_tpl_typography_components.html', {
-								"component": "select"
-							})
-							<!--selects end-->
-
-							<div class="user-spacer">&nbsp;</div>
+							<div class="user-spacer"></div>
 
 							<!--checkbox and radio-->
 							@@include('_tpl_typography_components.html', {
-							"component": "checkboxRadio"
+								"component": "checkboxRadio"
 							})
 							<!--checkbox and radio end-->
 
+							<div class="user-spacer"></div>
+
 							<!--user form-->
 							@@include('_tpl_typography_components.html', {
-							"component": "userForm"
+								"component": "userForm"
 							})
 							<!--user form end-->
 						</div>
