--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -9,7 +9,7 @@
 				<div class="input-holder">
 					<input type="text" id="user-form-example__name-field">
 					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="confirm-note">&nbsp;</span>
+					<span class="success-note">&nbsp;</span>
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -19,7 +19,7 @@
 				<div class="input-holder">
 					<input type="email" id="user-form-example__email-field">
 					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="confirm-note">&nbsp;</span>
+					<span class="success-note">&nbsp;</span>
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -29,7 +29,7 @@
 				<div class="input-holder">
 					<textarea id="user-form-example__message-field"></textarea>
 					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="confirm-note">&nbsp;</span>
+					<span class="success-note">&nbsp;</span>
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -49,7 +49,7 @@
 						<img src="img/captcha.jpg" alt="captcha" />
 						<input type="text" id="user-form-example__captcha-field">
 						<span class="error-note">Введите текст на картинке для защиты от спама</span>
-						<span class="confirm-note">&nbsp;</span>
+						<span class="success-note">&nbsp;</span>
 					</div>
 				</div>
 			</div>
