--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
 						<div class="footer-bottom__col">
 							<!--developer-->
 							<div class="developer">
-								<a href="http://astronim.by/">
+								<a href="http://astronim.by/" target="_blank">
 									<span class="developer__label">Разработка сайта —</span>
 									<span class="developer__logo">Astronim*Support</span>
 								</a>
