--- a/src/_tpl_typography_components.html
+++ b/src/_tpl_typography_components.html
@@ -349,9 +349,33 @@
 			<a href="#" class="btn-default">Link</a>
 		</div>
 		<div style="padding: 0 0 20px;">
+			<button class="btn-default">Button</button>
+		</div>
+		<div style="padding: 0 0 20px;">
 			<input class="btn-default" type="submit" value="Type submit">
 			<input class="btn-default" type="button" value="Type button">
 			<input class="btn-default" type="reset" value="Type reset">
+		</div>
+	</div>
+
+	@@include('_tpl_title-anchor.html', {
+		"taId": "buttonsDefDisabled",
+		"taText": "Дефолтные кнопки (неактивные)",
+		"taTag": "h4"
+	})
+	<div class="layout-text">
+		<div style="padding: 0 0 20px;">
+			<a href="javascript:void(0)" class="btn-default disabled">Link (.disabled)</a>
+			<a href="javascript:void(0)" class="btn-default" data-disabled>Link (data-disabled)</a>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<button class="btn-default disabled">Button (.disabled)</button>
+			<button class="btn-default" data-disabled>Button (data-disabled)</button>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<input class="btn-default" type="submit" value="Type submit" disabled>
+			<input class="btn-default" type="button" value="Type button" disabled>
+			<input class="btn-default" type="reset" value="Type reset" disabled>
 		</div>
 	</div>
 
@@ -365,9 +389,70 @@
 			<a href="#" class="btn-default-alt">Отправить заявку</a>
 		</div>
 		<div style="padding: 0 0 20px;">
+			<button class="btn-default-alt">Button</button>
+		</div>
+		<div style="padding: 0 0 20px;">
 			<input class="btn-default-alt" type="submit" value="Type submit">
 			<input class="btn-default-alt" type="button" value="Type button">
 			<input class="btn-default-alt" type="reset" value="Type reset">
+		</div>
+	</div>
+
+	@@include('_tpl_title-anchor.html', {
+		"taId": "buttonsAltDisabled",
+		"taText": "Альтернативные кнопки (неактивные)",
+		"taTag": "h4"
+	})
+	<div class="layout-text">
+		<div style="padding: 0 0 20px;">
+			<a href="javascript:void(0)" class="btn-default-alt disabled">Отправить заявку (.disabled)</a>
+			<a href="javascript:void(0)" class="btn-default-alt" data-disabled>Отправить заявку (data-disabled)</a>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<button class="btn-default-alt disabled">Button (.disabled)</button>
+			<button class="btn-default-alt" data-disabled>Button (data-disabled)</button>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<input class="btn-default-alt" type="submit" value="Type submit" disabled>
+			<input class="btn-default-alt" type="button" value="Type button" disabled>
+			<input class="btn-default-alt" type="reset" value="Type reset" disabled>
+		</div>
+	</div>
+
+	@@include('_tpl_title-anchor.html', {
+		"taId": "buttonsWithIcon",
+		"taText": "Кнопки с иконкой",
+		"taTag": "h4"
+	})
+	<div class="layout-text">
+		<div style="padding: 0 0 20px;">
+			<button class="btn-default btn-with-icon">
+				<i class="depict-send">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+				</i>
+				<span>Отправить</span>
+			</button>
+		</div>
+	</div>
+
+	@@include('_tpl_title-anchor.html', {
+		"taId": "buttonsWithArr",
+		"taText": "Кнопки со стрелками",
+		"taTag": "h4"
+	})
+	<div class="layout-text">
+		<div style="padding: 0 0 20px;">
+			<a href="#" class="btn-default btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<a href="#" class="btn-default btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+		</div>
+
+		<div style="padding: 0 0 20px;">
+			<a href="#" class="btn-default-alt btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a>
+		</div>
+		<div style="padding: 0 0 20px;">
+			<a href="#" class="btn-default-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
 		</div>
 	</div>
 
